--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-modal": "^3.10.6",
+    "@types/react-router-dom": "^5.1.6",
     "csv": "^5.3.2",
     "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-modal": "^3.12.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
